; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_if_tcl.c_tcldelthisinterp.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_if_tcl.c_tcldelthisinterp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i32*, i32* }

@tclinfo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @tcldelthisinterp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcldelthisinterp() #0 {
  %1 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %2 = call i32 @Tcl_InterpDeleted(i32* %1)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %6 = call i32 @Tcl_DeleteInterp(i32* %5)
  br label %7

7:                                                ; preds = %4, %0
  %8 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %9 = call i32 @Tcl_Release(i32* %8)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %10 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 1), align 8
  %11 = call i32 @Tcl_Free(i32* %10)
  %12 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 0), align 8
  %13 = call i32 @Tcl_Free(i32* %12)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 0), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 1), align 8
  ret void
}

declare dso_local i32 @Tcl_InterpDeleted(i32*) #1

declare dso_local i32 @Tcl_DeleteInterp(i32*) #1

declare dso_local i32 @Tcl_Release(i32*) #1

declare dso_local i32 @Tcl_Free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
